# cfm-id-original-changed

./: .gitattributes  .gitignore  LICENSE.md  README.md
cfm/: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  FindRDKit.cmake  INSTALL.md  INSTALL.txt  example_spec.txt
cfm-cross-validation-models/Metlin 2015 MSML/2015_[M+H]+/: metab_mol_list_[M+H]+.txt  model_config.txt
cfm-cross-validation-models/Metlin 2015 MSML/2015_[M-H]-/: metab_mol_list_[M-H]-.txt
cfm-cross-validation-models/Metlin 2019 MSML/2019_[M+H]+/: metab_mol_list_[M+H]+.txt
cfm-cross-validation-models/Metlin 2019 MSML/2019_[M-H]-/: metab_mol_list_[M-H]-.txt
cfm-pretrained-models/cfmid4/[M+H]+/: param_config.txt
cfm-pretrained-models/cfmid4/[M-H]-/: param_config.txt
cfm-pretrained-models/npsms/npsms/: param_config.txt
cfm-pretrained-models/npsms/npsms-scratch/: param_config.txt
cfm-pretrained-models/npsms/nspms/: param_config.txt
cfm/cfm-annotate/: CMakeLists.txt  main.cpp
cfm/cfm-boost-test/: CMakeLists.txt  main.cpp
cfm/cfm-boost-test/features_tests/: FeaturesTestBreakAtomPair.cpp  FeaturesTestBrokenOrigBondType.cpp  FeaturesTestExtraFunctionalGroups.cpp  FeaturesTestExtraRingFeatures.cpp  FeaturesTestFunctionalGroups.cpp  FeaturesTestFunctionalGroupsRootOnly.cpp  FeaturesTestGasteigerCharges.cpp  FeaturesTestHydrogenMovement.cpp  FeaturesTestIonicFeatures.cpp  FeaturesTestLength.cpp  FeaturesTestMatrixFP.cpp  FeaturesTestNeighbourMMFFAtomType.cpp  FeaturesTestQuadraticFeatures.cpp  FeaturesTestRadicalFeatures.cpp  FeaturesTestRootAtom.cpp  FeaturesTestRootMMFFAtomType.cpp  FeaturesTestRootPairs.cpp  FeaturesTestRootTriples.cpp  FeaturesTestsInitClass.cpp  FeaturesTestsUtil.cpp  FeaturesTestsUtil.h
cfm/cfm-boost-test/fraggen_tests/: FragGenNegativeESITests.cpp  FragGenPostiveEITests.cpp  FragGenPostiveESITests.cpp  FragGenSaveLoadTests.cpp  FragGenSimpleBreaksTests.cpp  FragGenTestsUtils.cpp  FragGenTestsUtils.h
cfm/cfm-boost-test/inference_tests/: InferenceMessageTests.cpp  InferenceTestMols.h  InferenceTestSpectrumMessage.cpp  InferenceTestSpectrumMessageNoisePeak.cpp  InferenceTestSpectrumMessageWithIsotopes.cpp  InferenceTestSpectrumMessageWithIsotopesAndNoisePeak.cpp  InferenceTestsCaseClasses.h  MessageTests.cpp
cfm/cfm-boost-test/learner_tests/: EmTests.cpp  LearnerTestMols.h  NNParamTests.cpp  ParamTestMols.h  ParamTests.cpp  SolverTests.cpp
cfm/cfm-boost-test/test_data/: comparator_test_input_file.txt  example_feature_config.txt  example_nnparam_config.txt  example_param_config.txt  three_energies.msp  valid_feature_config.txt
cfm/cfm-boost-test/test_data/test_pspec/: Test2.txt
cfm/cfm-boost-test/test_data/test_spec/: Test2.txt  Test3.txt
cfm/cfm-boost-test/util_tests/: ComparatorTests.cpp  MspReaderTests.cpp  SpectrumTests.cpp
cfm/cfm-boost-test/utils_tests/: ComparatorTests.cpp  SpectrumTests.cpp
cfm/cfm-code/: CMakeLists.txt  Comms.cpp  Comms.h  Comparators.cpp  Comparators.h  Config.cpp  Config.h  DirectModel.cpp  DirectModel.h  EM.cpp  EM.cpp~RFa83751f.TMP  EM.h  EM_NN.cpp  EM_NN.h  EmModel.cpp  EmModel.h  EmNNModel.cpp  EmNNModel.h  Feature.cpp  Feature.h  FeatureCalculator.cpp  FeatureCalculator.h  FeatureVector.cpp  FeatureVector.h  Features.cpp  Features.h  FragmentGraph.cpp  FragmentGraph.h  FragmentGraphGenerator.cpp  FragmentGraphGenerator.h  FragmentTreeNode.cpp  FragmentTreeNode.h  FunctionalGroups.cpp  FunctionalGroups.h  IPFP.cpp  IPFP.h  Identifier.cpp  Identifier.h  Inference.cpp  Inference.h  (+23 more)
cfm/cfm-code/Features/: BreakAtomPair.cpp  BreakAtomPair.h  BreakFuncitonalGroupFeature.cpp  BreakFuncitonalGroupFeature.h  BreakHistoryFeature.cpp  BreakHistoryFeature.h  BrokenOrigBondType.cpp  BrokenOrigBondType.h  ExtraRingFeatures.cpp  ExtraRingFeatures.h  FeatureHelper.cpp  FeatureHelper.h  FingerPirntFeature.cpp  FingerPirntFeature.h  FingerPrintFeature.cpp  FingerPrintFeature.h  FragmentFingerPrintFeature.cpp  FragmentFingerPrintFeature.h  FragmentFunctionGroupFeature.h  FragmentFunctionalGroupFeature.cpp  FragmentFunctionalGroupFeature.h  FunctionalGroupFeature.cpp  FunctionalGroupFeature.h  GasteigerCharges.cpp  GasteigerCharges.h  GastigerCharges.h  GraphDepthFeature.cpp  GraphDepthFeature.h  HydrogenMovement.cpp  HydrogenMovement.h  HydrogenRemoval.cpp  HydrogenRemoval.h  IonExtraFunctionalGroupFeatures.cpp  IonExtraFunctionalGroupFeatures.h  IonFingerPrintFeature.cpp  IonFingerPrintFeature.h  IonFunctionalGroupFeatures.cpp  IonFunctionalGroupFeatures.h  IonFunctionalGroupFeaturesD2.cpp  IonFunctionalGroupFeaturesD2.h  (+92 more)
cfm/cfm-feature-calculator/: CMakeLists.txt  main.cpp
cfm/cfm-id/: CMakeLists.txt  main.cpp
cfm/cfm-id-precomputed/: CMakeLists.txt  main.cpp
cfm/cfm-predict/: CMakeLists.txt  main.cpp
cfm/cfm-test/: CMakeLists.txt  test.cpp  test.h
cfm/cfm-test/tests/: comms_test.cpp  comms_test.h  comparator_test.cpp  em_test.cpp  em_test.h  features_test.cpp  features_test.h  fraggen_test.cpp  fraggen_test.h  inference_test.cpp  inference_test.h  ipfp_test.cpp  libdai_inference_test.cpp  libdai_inference_test.h  message_test.cpp  msp_reader_test.cpp  nn_param_test.cpp  nn_param_test.h  param_test.cpp  spectrum_test.cpp
cfm/cfm-test/tests/test_data/: example_feature_config.txt  example_feature_config_withquadratic.txt  example_param_config.txt  example_spectra.txt  invalid_feature_config.txt  nist2011_cutdown.msp  valid_feature_config.txt
cfm/cfm-test/tests/test_data/test_pspec/: Test1.txt  Test3.txt
cfm/cfm-train/: CMakeLists.txt  main.cpp
cfm/cmake/: FindRDKit.cmake  Version.h.in
cfm/compute-stats/: CMakeLists.txt  main.cpp
cfm/fraggraph-gen/: CMakeLists.txt  main.cpp
cfm/lp_solve_patch/: ccc
docker/: CFMID2and3.dockerfile  CFMID2and3_Dockerfile  CFMID4.dockerfile  CFMID4_Dockerfile  DevBuild.dockerfile  DevBuild_Dockerfile  DevEnv.dockerfile  DevEnv_Dockerfile  Dockerfile  NPSMS.dockerfile  NPSMS_Dockerfile  README.md  lpsolve55_patched_ccc  predict.py
docker/cfmid3/: Dockerfile
docker/cfmid4/: Dockerfile
